css/style.css
/* ... */
.quote {
 padding-top: 30px;
 padding-bottom: 10px;
 color: #ffffff;
 font-size:28px;
 }

@media (min-width: 768px) {
  .marketing {
    padding-left: 0;
    padding-right: 0;
  	}
  }

/* Fixes width of embedded signup form */
@media (min-width: 320px) {
  iframe.signup {
    width: 310px;
    height: 675px;
    background-color: #f4f4f4;
  	}
  }

@media (min-width: 660px) {
  iframe.signup {
    width: 595px;
    height: 375px;
    }
  }
  
.float {
  margin: 0 auto;
  text-align: center;
  background-color: #f4f4f4;
  }

.float iframe {
  display:inline-block;
  padding: 5px;
  }

.icon {
  text-align:center;
  margin: 0 auto;
  padding-top: 20px;
  padding-bottom: 15px;
  }

.icon img {
  display:inline-block;
  width:60%;
  }

.threes img {
  display:inline-block;
  width:100px;
  }

.center {
  text-align:center;
  }   

.steps {
  font-size: 18px;
  line-height:1.6em;
  }

.mini {
  font-size:14px;
  line-height:1.5em;
  color:#ffffff;
  }
  
.exo {
  font-family: 'Exo Light', Tahoma, Geneva, Sans-serif;
  }
  
img.feat {
  box-shadow: 0px 0px 5px 0px rgba(195,195,195,1);
  -webkit-box-shadow: 0px 0px 5px 0px rgba(195,195,195,1);
  -moz-box-shadow: 0px 0px 5px 0px rgba(195,195,195,1);
  border:1px solid #cccccc;
  }
 
.inset {
  background-color: #f4f4f4;
  }

.inset h4 {
  margin-left: 5px;
  line-height: 60px;
  }

.inset img {
  background-color: #ffffff;
  border-radius: 50%;
  margin: 5px;
  padding: 5px;
  height: 50px;
  float:left;
  }
  
img.team {
  border-radius:50%;
  border: 2px solid #86a333;
  background-color: #86a333;
  padding: 5px;
  margin-top:20px;
  } 


/*=====================================================================================
================================* PAGES *==============================================
==================================================================================== */


/* ================ Index page styles =================== */

.logos {
  text-align:center;
  margin:0 auto;
  padding: 10px 15px;
  }

.logos img {
  -webkit-filter: grayscale(100%);
  -moz-filter: grayscale(100%);
  filter: grayscale(100%);
  filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 10+, Firefox on Android */
  opacity: 0.8;
  filter: alpha(opacity=80);
  width:90%;
  filter: gray;
  }
  
.logos img:hover {
  opacity: 1.0;
  filter: alpha(opacity=100);
  -webkit-filter: grayscale(0%);
  -moz-filter: grayscale(0%);
  filter: grayscale(0%);
  filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'1 0 0 0 0, 0 1 0 0 0, 0 0 1 0 0, 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 10+, Firefox on Android */
  }   

.recent ul {
  list-style-type:none;
  margin:0;
  padding:0px;
  }

.recent li {
  border-top: 1px solid #e4e4e4;
  padding: 12px 0 0 0;
  margin: 12px 0 0 0;
  }


.recent li a {
  color: #10a0d2;
  border-bottom: 0;
  }

.featured {
  margin: 0 auto;
  text-align:center;
  }

.featured img {
  display: inline-block;
  width: 200px;
  }   

/* ================ Pricing page styles =================== */

.pricingnav ul { /*changed on 01.05.2015*/
  margin:0 0 30px 0;
  line-height:24px;
  text-align:center;
  list-style:none;
  }

.pricingnav li,
.pricingnav li a {
  display:inline;
  margin:0 10px;
  font-size:20px;
  font-weight:400;
  color:#333333;
  }

.pricingnav li.page-current a {
  background: url(../img/pricing-nav-current-2.png) 50% 100% no-repeat; 
  padding-bottom:10px;
  } 

.pricingcol {
  margin:0px;  /*changed on 01.05.2015*/
  padding:0px;
  border: 1px solid #e4e4e4;
  background-color:#fff;
  box-shadow: 0px 0px 5px 0px rgba(195,195,195,1);
  -webkit-box-shadow: 0px 0px 5px 0px rgba(195,195,195,1);
  -moz-box-shadow: 0px 0px 5px 0px rgba(195,195,195,1);
  }

.pricingcol h2 {
  color: #ffffff;
  background-color:#989898;
  text-transform:uppercase;
  text-align:center;
  border-bottom:1px solid #f2f2f2;
  padding:10px;
  margin:10px 10px 30px 10px;
  font-weight:300;
  }
  
.pricingcol h2.enterprise {
  background-color:#333333;
  }

.pricingcol .price{
  font-size:50px;
  line-height:60px;
  padding:0;
  font-weight:300;
  background-color:#ffffff;
  text-align:center;
  }

p.hrule {
  margin:10px 5px;
  border-top:1px dotted #cccccc;
  }

.pricingcol p {
  text-align:center;
  padding: 5px 10px;
  }

.pricingcol .exp {
  font-weight:600;
  font-size:16px;
  }

.pricingcol .checkdiv {
  margin:8px;
  padding-bottom:7px;
  }

.pricingcol ul.check {
  list-style-position:outside;
  list-style-image: url(../img/check.gif);
  }

.pricingcol .create {
  background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #f16000), color-stop(1, #f16000) );
  background:-moz-linear-gradient( center top, #f16000 5%, #f16000 100% );
  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#f16000', endColorstr='#f16000');
  background-color:#f16000;
  -webkit-border-radius:3px;
  -moz-border-radius:3px;
  border-radius:3px;
  text-indent:0;
  border:0px solid #d75600;
  display:inline-block;
  color:#ffffff;
  font-family: 'Open Sans',Tahoma,Arial,Sans-serif;
  font-size:14px;
  font-weight:600;
  font-style:normal;
  padding: 5px 15px;
  text-decoration:none;
  text-align:center;
  text-shadow:0px 0px 0px #d75600;
  }

.pricingcol .create.blue {
  background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #10a0d2), color-stop(1, #10a0d2) );
  background:-moz-linear-gradient( center top, #10a0d2 5%, #10a0d2 100% );
  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#10a0d2', endColorstr='#10a0d2');
  background-color:#10a0d2;
  text-shadow:0px 0px 0px #0d7ddb;
  }
  

p.tiny {
  font-size:13px;
  line-height:16px;
  text-align:left;
  margin-bottom:2px;
  }
/* ... */

